--- a/MainActivity/project.properties
+++ b/MainActivity/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=..\\appcompat_v7
-android.library.reference.2=../floateditlibrary
+android.library.reference.1=..\\floateditlibrary
+android.library.reference.2=../appcompat
